hide non-functioning overlays

--- a/web-map/index.html
+++ b/web-map/index.html
@@ -421,10 +421,10 @@
       <div id="Overlays">
         <h2 class="f5 mb1 black-40">Overlays</h2>
 
-        <label class="f5" title="Includes ponds, lakes, oceans, swamps, glaciers, and the area covered by large rivers, streams, and/or canals. Data from TIGER/Line Shapefile, 2010, CT, Current Area Hydrography Shapefile.">
+        <!-- <label class="f5" title="Includes ponds, lakes, oceans, swamps, glaciers, and the area covered by large rivers, streams, and/or canals. Data from TIGER/Line Shapefile, 2010, CT, Current Area Hydrography Shapefile.">
           <input type="checkbox" class="h1 w1 main-in-group" name="Overlay" value="hydro">
             Waterways
-        </label>
+        </label> -->
 
         <br>
 
@@ -435,16 +435,16 @@
 
         <br>
 
-        <label class="f5" title="">
+        <!-- <label class="f5" title="">
           <input type="checkbox" class="h1 w1 main-in-group" name="Overlay" value="sewer">
             Sewer Service Areas
-        </label>
+        </label> -->
 
-        <div class="filter-group">
+        <!-- <div class="filter-group">
           <label class="f5">
             <input type="checkbox" class="h1 w1 main-in-group" name="Overlay" value="transit">
               Transit Stations (Rail & CTfastrak)
-          </label>
+          </label> -->
 
           <div class="pl1 dn subgroup pb2 bb b--black-10">
             <span class="f6 black-50 ml3 pl1 i">Circles represent 0.5-mile radius</span>
