Add mobile home park filter

--- a/web-map/index.html
+++ b/web-map/index.html
@@ -435,7 +435,7 @@
         <div class="filter-group">
           <label class="f5">
             <input type="checkbox" class="w1 h1 main-in-group" name="AHT" value="A">
-              <span>Affordable Housing Bonuses</span>
+              <span>Affordable Housing</span>
           </label>
         </div>
 
@@ -458,6 +458,13 @@
               <label>
                 <input type="checkbox" class="checked-by-default" name="PRD" value="AH">
                   Allowed Only After Public Hearing
+              </label>
+
+              <br>
+
+              <label>
+                <input type="checkbox" class="checked-by-default" name="MHP" value="No">
+                  Mobile or Manufactured Homes Permitted
               </label>
             </div>
           </div>
