fix mobile home filter

--- a/web-map/index.html
+++ b/web-map/index.html
@@ -459,15 +459,18 @@
                 <input type="checkbox" class="checked-by-default" name="PRD" value="AH">
                   Allowed Only After Public Hearing
               </label>
-
-              <br>
-
-              <label>
-                <input type="checkbox" class="checked-by-default" name="MHP" value="No">
-                  Mobile or Manufactured Homes Permitted
-              </label>
-            </div>
+            </div> 
+          <div class="ph1">
+            <label>
+              <input type="checkbox" class="checked-by-default" name="MHP" value="Yes">
+                Mobile or Manufactured Homes Permitted
+            </label> 
+            <br>
           </div>
+             
+          </div>
+
+          
         </div>
 
       </div>
