--- a/web-map/index.html
+++ b/web-map/index.html
@@ -331,7 +331,7 @@
 
             <h5 class="f6 mb0 mt2 black-80 pl1">Minimum Lot Size, acres</h5>
             <div class="at-least-one-checked pa1 br1">
-              label>
+              <label>
                 <input type="checkbox" class="checked-by-default" name="1MLS" value="A"> None
               </label>
 
@@ -463,7 +463,7 @@
           <div class="ph1">
             <label>
               <input type="checkbox" class="checked-by-default" name="MHP" value="Yes">
-                Mobile or Manufactured Homes Permitted
+                Mobile or Manufactured Home Parks Permitted
             </label> 
             <br>
           </div>
