Make income-restricted mutually exclusive

--- a/web-map/index.html
+++ b/web-map/index.html
@@ -221,7 +221,7 @@
               <br>
 
               <label>
-                <input type="checkbox" class="" name="2AHO" value="Yes">
+                <input type="checkbox" class="checked-by-default" name="2F" value="IR">
                   Allowed Only If Income Restricted
               </label>
             </div>
@@ -322,7 +322,7 @@
               <br>
 
               <label>
-                <input type="checkbox" class="" name="3AHO" value="Yes">
+                <input type="checkbox" class="checked-by-default" name="3F" value="IR">
                   Allowed Only If Income Restricted
               </label>
             </div>
@@ -424,7 +424,7 @@
               <br>
 
               <label>
-                <input type="checkbox" class="" name="4AHO" value="Yes">
+                <input type="checkbox" class="checked-by-default" name="2F" value="IR">
                   Allowed Only If Income Restricted
               </label>
             </div>
