simplify geometry for district dataset

--- a/web-map/index.html
+++ b/web-map/index.html
@@ -34,8 +34,7 @@
   <!-- Load Material icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-  <script src="data/demographics.js"></script>
-  <script src="data/transit.js"></script>
+  <!-- <script src="data/demographics.js"></script> -->
   <script src="scripts/map.js"></script>
 
   <!-- Load Leaflet Pip -->
