--- a/web-map/index.html
+++ b/web-map/index.html
@@ -37,8 +37,8 @@
   <!-- <script src="data/demographics.js"></script> -->
   <script src="scripts/map.js"></script>
 
-  <!-- Load Leaflet Pip -->
-  <script src="https://unpkg.com/@mapbox/leaflet-pip@latest/leaflet-pip.js"></script>
+  <!-- Load Turf.js -->
+  <script src='https://unpkg.com/@turf/turf@6/turf.min.js'></script>
 
   <!-- Load Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Condensed&display=swap" rel="stylesheet">
